title, external js, style tweaks

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,4 +27,7 @@
 	width:200px;
 	margin:0 0 0 20px;
 }
-
+h2, h4{
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light","Helvetica Neue", Helvetica,sans-serif;
+	font-weight: 300;
+}
