--- a/css/styles.css
+++ b/css/styles.css
@@ -43,3 +43,6 @@ h2, h4{
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light","Helvetica Neue", Helvetica,sans-serif;
 	font-weight: 300;
 }
+#chart-container{
+	float:left;
+}
