--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ a:hover{
 	padding: 2px 0;
 }
 input, select{
-	width: 150px;
+	width: 175px;
 	position: relative;
 	margin: 0 0 10px 0;
 }
@@ -86,8 +86,8 @@ h4{
 }
 .tab{
 	width: auto;
-	color: #ACACAC;
-	padding: 1px 8px;
+	color: #AFAFAF;
+	padding: 1px 8px 1px 0;
 	display: inline-block;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
@@ -102,8 +102,7 @@ h4{
 	text-decoration: underline;
 }
 .tab.active{
-	color: #fff;
-	background-color: #6c0;
+	color: #6c0;
 }
 .tab.active:hover{
 	cursor: default;
