--- a/css/styles.css
+++ b/css/styles.css
@@ -46,10 +46,16 @@ input, select{
 	width: 200px;
 	margin: 0 0 0 20px;
 }
-h4{
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light","Helvetica Neue", Helvetica,sans-serif;
-	font-weight: 300;
+h4, p{
+	font-family:  Helvetica,sans-serif;
+	/*font-weight: 300;*/
 	margin: 0 0 20px 0;
+	font-weight: normal;
+	font-size: 13px;
+	width: 750px;
+}
+p{
+	margin-bottom: 20px;
 }
 #descriptive-stats{
 	margin: 20px 0 0 0;
